# wasi-tensorflow-inference

./: .gitignore  Cargo.toml  LICENSE  build.rs  readme.md  test.js
crates/wasi-mobilenet-inference/: Cargo.toml  readme.md
crates/wasi-mobilenet-inference/src/: lib.rs
src/: main.rs
