[package]
name = "wasi-tensorflow-inference"
version = "0.1.0"
authors = ["Radu M <root@radu.sh>"]
edition = "2018"

[dependencies]
wasmtime = "0.20"
wasmtime-wasi = "0.20"
wasi-common = "0.20"
hyper = "0.13"
hyper-tls = "0.4.3"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3.1", features=["compat"] }
futures = "0.3"
anyhow = "1.0"
